--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <body>
     <header class="header">
       <nav>
-        <div class="logo">Ashish</div>
+        <div class="logo">Ashish
+          
+        </div>
         <i class="fa-solid fa-bars"></i>
         <ul>
           <li class="a_red"><a href="Home">Home</a></li>
